# mopsus-backend

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  manage.py  pr.txt  pylintrc  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
auth/: querys.py  repository.py  service.py  urls.py  views.py
mopsus_backend/: asgi.py  settings.py  urls.py  wsgi.py
products/: models.py  querys.py  repository.py  service.py  urls.py  views.py
